# oop_programming_cpp

./: .gitmodules  01_cmake
01_cmake/: CMakeLists.txt  main.cpp  test.cpp
02_tdd/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
02_tdd/test/src/: TextWrapperTest.cpp
03_sequence_containers/: CMakeLists.txt  readme.md
03_sequence_containers/test/: CMakeLists.txt
03_sequence_containers/test/include/: TestIncludes.h
03_sequence_containers/test/src/: CollectionsTest.cpp
04_associative_containers/src/: main.cpp
04_associative_containers/test/src/: CollectionsTest.cpp
05_stl_benchmark/: readme.md
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/src/: DrawnContainersSmall.cpp  ExampleBench.cpp  LargeBench.cpp  LargeMap.cpp  LargeMultiset.cpp  LargeVector.cpp  MediumBench.cpp  MediumMap.cpp  MediumMultiset.cpp  MediumVector.cpp  PauseAndResumeBench.cpp  SmallBench.cpp  SmallMap.cpp  SmallMultiset.cpp  SmallVector.cpp
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/output/: PozdrawiamMaksymilianWojcikPrzepraszamZaSpam  releaseBenchSML  releaseBenchSMLpart2  releaseBenchSMLpart3
05_stl_benchmark/test/src/: LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
08_fake_mock_or_stub/: CMakeLists.txt
08_fake_mock_or_stub/include/: ObserverImpl.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h
08_fake_mock_or_stub/src/: ObserverImpl.cpp  SpaceImpl.cpp
08_fake_mock_or_stub/test/: CMakeLists.txt
08_fake_mock_or_stub/test/include/: ObserverMock.h  SpaceMock.h  TimeMock.h
08_fake_mock_or_stub/test/src/: UniverseTest.cpp
10_state_machine/: mainwindow.cpp  mainwindow.h
10_state_machine/build-10_state_machine-Desktop-Debug/: 10_state_machine  exampleFile.txt
11_qml/: 11_qml.pro  acceleration.cpp  acceleration.h  demo.cpp  demo.h  demo1.cpp  demo1.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
QtProjects/01_accelerationGUI/: 01_accelerationGUI.pro
QtProjects/01_notSoSimpleConfigOfSimpleGUI/: 01_notSoSimpleConfigOfSimpleGUI.pro
QtProjects/01_simpleGUI/: 01_simpleGUI.pro
QtProjects/01_simpleGUI2/: 01_simpleGUI2.pro  acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  speed.cpp  speed.h
QtProjects/02_/: 02_.pro
build-10_state_machine-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
